samples/_failures_safe/1761695480_5acc51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e14e63c7.c: In function ‘main’:
./samples/SAFE/__tmp_e14e63c7.c:155:17: error: expected declaration or statement at end of input
  155 |                 if (add_matrices(&mat1, &mat2, &result)) {
      |                 ^~
./samples/SAFE/__tmp_e14e63c7.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e14e63c7.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e14e63c7.c:155:17: error: expected declaration or statement at end of input
